--- a/roles/nuage_ca/tasks/main.yaml
+++ b/roles/nuage_ca/tasks/main.yaml
@@ -16,6 +16,7 @@
 - name: Check if the CA key already exists
   stat: path="{{ nuage_ca_key }}"
   register: nuage_ca_key_check
+  delegate_to: "{{ nuage_ca_master }}"
 
 - name: Create CA key
   command: openssl genrsa -out "{{ nuage_ca_key }}" 4096
@@ -23,10 +24,16 @@
   delegate_to: "{{ nuage_ca_master }}"
   when: nuage_ca_key_check.stat.exists is defined and nuage_ca_key_check.stat.exists == False
 
+- name: Check if the CA crt already exists
+  stat: path="{{ nuage_ca_crt }}"
+  register: nuage_ca_crt_check
+  delegate_to: "{{ nuage_ca_master }}"
+
 - name: Create CA crt
   command: openssl req -new -x509 -key "{{ nuage_ca_key }}" -out "{{ nuage_ca_crt }}" -subj "/CN=nuage-signer"
   run_once: true
   delegate_to: "{{ nuage_ca_master }}"
+  when: nuage_ca_crt_check.stat.exists is defined and nuage_ca_crt_check.stat.exists == False
 
 - name: Create the serial file
   copy: src=serial.txt dest="{{ nuage_ca_serial }}"
