--- a/playbooks/common/openshift-cluster/additional_config.yml
+++ b/playbooks/common/openshift-cluster/additional_config.yml
@@ -21,7 +21,7 @@
   - role: openshift_cluster_metrics
     when: openshift.common.use_cluster_metrics | bool
   - role: openshift_cluster_metrics_hawkular 
-    when: use_cluster_metrics_hawkular | bool
+    when: openshift.common.use_cluster_metrics_hawkular | bool and not openshift.common.use_cluster_metrics | bool
   - role: openshift_manageiq
     when: openshift.common.use_manageiq | bool
   - role: cockpit
