--- a/roles/openshift_cluster_metrics_hawkular/files/cluster-metrics/origin-metrics.yaml
+++ b/roles/openshift_cluster_metrics_hawkular/files/cluster-metrics/origin-metrics.yaml
@@ -63,7 +63,7 @@ parameters:
 -
   description: 'Specify prefix for metrics components; e.g. for "openshift/origin-metrics-deployer:v1.1", set prefix "openshift/origin-"'
   name: IMAGE_PREFIX
-  value: "registry.access.redhat.com/openshift3/"
+  value: "docker.io/openshift/origin-"
 -
   description: 'Specify version for metrics components; e.g. for "openshift/origin-metrics-deployer:v1.1", set version "v1.1"'
   name: IMAGE_VERSION
@@ -71,7 +71,7 @@ parameters:
 -
   description: "Internal URL for the master, for authentication retrieval"
   name: MASTER_URL
-  value: "https://kubernetes.default.svc.cluster.local:443"
+  value: "https://kubernetes.default.svc:443"
 -
   description: "External hostname where clients will reach Hawkular Metrics"
   name: HAWKULAR_METRICS_HOSTNAME
@@ -83,7 +83,7 @@ parameters:
 -
   description: "Set to true for persistent storage, set to false to use non persistent storage"
   name: USE_PERSISTENT_STORAGE
-  value: "true"
+  value: "false"
 -
   description: "The number of Cassandra Nodes to deploy for the initial cluster"
   name: CASSANDRA_NODES
