--- a/roles/openshift_cluster_metrics_hawkular/tasks/main.yaml
+++ b/roles/openshift_cluster_metrics_hawkular/tasks/main.yaml
@@ -43,8 +43,8 @@
 - name: Create Heapster Services
   shell: >
     {{ openshift.common.client_binary }} process -f
-    {{ openshift.common.config_base }}/cluster-metrics/metrics.yaml -v 
-    HAWKULAR_METRICS_HOSTNAME=hawkular-metrics.example.com,USE_PERSISTENT_STORAGE=false |
+    {{ openshift.common.config_base }}/cluster-metrics/{{ hawkular_type }}-metrics.yaml -v 
+    HAWKULAR_METRICS_HOSTNAME={{ hawkular_hostname }} |
     {{ openshift.common.client_binary }} create -n openshift-infra -f - 
   register: oex_heapster_services
   failed_when: "'already exists' not in oex_heapster_services.stderr and oex_heapster_services.rc != 0"
