--- a/roles/os_zabbix/vars/template_openshift_master.yml
+++ b/roles/os_zabbix/vars/template_openshift_master.yml
@@ -14,7 +14,13 @@ g_template_openshift_master:
     - Openshift Master
 
   - key: openshift.master.pv.space.total
-    description: "check the total use of pv sapce"
+    description: "check the total capacity of pv sapce"
+    value_type: int
+    applications:
+    - Openshift Master
+
+  - key: openshift.master.pv.space.availble
+    description: "check the availble capacity of pv sapce"
     value_type: int
     applications:
     - Openshift Master
@@ -326,13 +332,6 @@ g_template_openshift_master:
     - 'Openshift Master process not running on {HOST.NAME}'
     priority: avg
    
-  - name: 'pv spaces above 100G on {HOST.NAME}'
-    expression: '{Template Openshift Master:openshift.master.pv.space.total.last()}>100'
-    url: 'https://github.com/openshift/ops-sop/blob/master/V3/Alerts/pv_space_above.asciidoc'
-    dependencies:
-    - 'Openshift Master process not running on {HOST.NAME}'
-    priority: high
-
   - name: 'Application creation has failed multiple times in the last hour on {HOST.NAME}'
     expression: '{Template Openshift Master:openshift.master.app.create.sum(1h)}>3'
     url: 'https://github.com/openshift/ops-sop/blob/master/V3/Alerts/check_create_app.asciidoc'
