--- a/roles/os_zabbix/vars/template_openshift_master.yml
+++ b/roles/os_zabbix/vars/template_openshift_master.yml
@@ -93,6 +93,18 @@ g_template_openshift_master:
     applications:
     - Openshift Master
 
+  - key: openshift.master.pv.space.total
+    description: Shows the total space of pv
+    value_type: int
+    applications:
+    - Openshift Master
+
+  - key: openshift.master.pv.space.availble
+    description: Shows the available space of pv
+    value_type: int
+    applications:
+    - Openshift Master
+
   - key: openshift.master.pv.total.count
     description: Total number of Persistent Volumes in the Openshift Cluster
     value_type: int
