--- a/roles/openshift_facts/tasks/main.yml
+++ b/roles/openshift_facts/tasks/main.yml
@@ -15,7 +15,7 @@
 - set_fact:
     l_is_atomic: "{{ ostree_output.rc == 0 }}"
 - set_fact:
-    l_is_containerized: "{{ l_is_atomic or containerized | default(false) | bool }}"
+    l_is_containerized: "{{ (l_is_atomic | bool) or (containerized | default(false) | bool) }}"
 
 - name: Ensure PyYaml is installed
   action: "{{ ansible_pkg_mgr }} name=PyYAML state=present"
