--- a/roles/openshift_master/meta/main.yml
+++ b/roles/openshift_master/meta/main.yml
@@ -12,6 +12,7 @@ galaxy_info:
   categories:
   - cloud
 dependencies:
+- role: openshift_docker
 - role: openshift_cli
 - role: openshift_cloud_provider
 - role: openshift_master_facts
