--- a/roles/openshift_master_facts/tasks/main.yml
+++ b/roles/openshift_master_facts/tasks/main.yml
@@ -65,3 +65,7 @@
       master_image: "{{ osm_image | default(None) }}"
       scheduler_predicates: "{{ openshift_master_scheduler_predicates | default(None) }}"
       scheduler_priorities: "{{ openshift_master_scheduler_priorities | default(None) }}"
+      admission_plugin_order: "{{openshift_master_admission_plugin_order | default(None) }}"
+      admission_plugin_config: "{{openshift_master_admission_plugin_config | default(None) }}"
+      kube_admission_plugin_order: "{{openshift_master_kube_admission_plugin_order | default(None) }}"
+      kube_admission_plugin_config: "{{openshift_master_kube_admission_plugin_config | default(None) }}"
