make docker service want ose containerized services
There are points where the docker service is restarted during
the install.  Sometimes the services that are PartOf docker.service
do not get restarted when docker is restarted.

https://bugzilla.redhat.com/show_bug.cgi?id=1318948

Systemd documentation recommends using "wants" as the perferred
means of creating startup linkages between units.  This
patch makes the ose services wanted by the docker service rather
than multi-user.target.

This creates a downward link from the docker service to the ose
containerized services.

--- a/roles/openshift_node/templates/openshift.docker.node.service
+++ b/roles/openshift_node/templates/openshift.docker.node.service
@@ -19,4 +19,4 @@ SyslogIdentifier={{ openshift.common.service_type }}-node
 Restart=always
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=docker.service
